--- a/server/package.json
+++ b/server/package.json
@@ -15,6 +15,11 @@
     "nodemon": "^3.0.1"
   },
   "dependencies": {
+    "apollo-server-express": "^3.6.1",
+    "bcrypt": "^4.0.1",
+    "graphql": "^16.3.0",
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^7.0.2",
     "express": "^4.18.2"
   }
 }
