--- a/package.json
+++ b/package.json
@@ -16,5 +16,10 @@
   "license": "ISC",
   "devDependencies": {
     "concurrently": "^8.2.0"
+  },
+  "dependencies": {
+    "@heroicons/react": "^2.0.18",
+    "assert": "^2.0.0",
+    "os-browserify": "^0.3.0"
   }
 }
