resolvers complete and working correctly

--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "@heroicons/react": "^2.0.18",
     "assert": "^2.0.0",
+    "moment": "^2.29.4",
     "os-browserify": "^0.3.0"
   }
 }
